--- a/Havoc/wayne/changelog
+++ b/Havoc/wayne/changelog
@@ -1,5 +1,3 @@
-Havoc-OS v3.3 Changelog 16-03-20:
-
 • Added ADB root
 • Added double arrow for extended swipe gesture
 • Added navigation handle length customization
@@ -8,3 +6,4 @@ Havoc-OS v3.3 Changelog 16-03-20:
 • Removed Screen off animations
 • Cleaned up and improved Config Center
 • Other fixes and improvements
+•测试--此源为自有github来源
